--- a/en.html
+++ b/en.html
@@ -18,6 +18,7 @@
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
+	<style> #link { color: white; } /* CSS link color */</style>
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
@@ -56,6 +57,8 @@
 							<div class="profile-thumb" style="background: url(images/ecu.jpg);"></div>
 							<h1><span>Efe Can UYAR</span></h1>
 							<h3><span>Director / Screenwriter / Film Editor</span></h3>
+							<h4></h4>
+							<h4><a id="link" href="https://uyarefecan.github.io">Change to Turkish</a></h4>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://twitter.com/efecanuyar" target="_blank"><i class="icon-twitter2"></i></a></li>
@@ -90,9 +93,9 @@
 				</div>
 				<div class="col-md-8 col-sm-12 col-xs-12">
 					<h2>Hello!</h2>
-					<p>In 2013, coming first as a result of the talent exam, I won the right to study at Dokuz Eylül University Faculty of Fine Arts in Izmir, Turkey. I graduated from Film Design and Directing Department in 2017.During my education I written, directed and edited 9 short films. Among these films, "The Receipt", "13 Hours" and "4 Walls" are held in various festivals and competitions; has received screenings and / or awards.</p>
-					<p>In addition to Adobe software such as Premiere Pro, After Effects, Photoshop and Illustrator, which I have gained a lot of experience in during my studies, I've also developed and continue to develop myself in software such as NukeX and Blender 3D. I did two paid internships, one as a set supervisor during the pre-production of the feature film "Wish to Wash With Rain" and other as a videographer and video editor at Tiramisu Productions.</p>
-					<p>In 2007, I started working as a freelancer for video production, photography, menu, packaging, graphic design, social media management and web designer. I co-established Design Corp. #9 - Visual Communications and Archtitecture firm in late 2017 and designed and directed various projects for many firms and customers in fields like music, health, construction, food and beauty.</p>
+					<p>In 2013, coming first as a result of the talent exam, I won the right to study at Dokuz Eylül University Faculty of Fine Arts in Izmir, Turkey. I graduated from Film Design and Directing Department in 2017.During my education I written, directed and edited 9 short films. Among these films, "The Receipt", "13 Hours" and "4 Walls" were held in various festivals and competitions; have received screenings and / or awards.</p>
+					<p>In addition to Adobe software such as Premiere Pro, After Effects, Photoshop and Illustrator, which I have gained a lot of experience in during my studies, I've also improved and continue to improve myself in software such as NukeX and Blender 3D. I did two paid internships, one as a set supervisor during the pre-production of the feature film "Wish to Wash With Rain" and other as a videographer and video editor at Tiramisu Productions.</p>
+					<p>In 2017, I started working as a freelancer for video production, photography, menu, packaging, graphic design, social media management and web designer. I co-established Design Corp. #9 - Visual Communications and Archtitecture firm in late 2017 and designed and directed various projects for many firms and customers in fields like music, health, construction, food and beauty.</p>
 					<p>In this page, you can find information about my projects, experiences, software I use and languages I speak. You can also find viewing links for all my films.</p>
 					<p>
 						<ul class="fh5co-social-icons">
@@ -195,7 +198,7 @@
 									<span class="company">Short Film - 2014 - Writer, Director and Editor</span>
 								</div>
 								<div class="timeline-body">
-									<p><i class="fas fa-tag"></i>  Genre: Fiction - Komedi</p>
+									<p><i class="fas fa-tag"></i>  Genre: Fiction - Comedy</p>
 									<p><i class="far fa-clock"></i>  Length: 2' 27"</p>
 									<p><i class="fas fa-volume-up"></i>  Sound: Stereo, Samsung Galaxy Note 2</p>
 									<p><i class="fas fa-paint-brush"></i>  Color: Color</p>
@@ -314,7 +317,7 @@
 									<span class="company">Full Feature Film - 2016</span>
 								</div>
 								<div class="timeline-body">
-									<p><i class="fas fa-suitcase"></i>  Internship - Pre-production Chief</p>
+									<p><i class="fas fa-suitcase"></i>  Internship - Pre-production Supervisor</p>
 									<p><i class="far fa-play-circle"></i><a href="https://www.youtube.com/watch?v=Z2zEo89RBEY" target="_blank">  Trailer</a></p>
 								</div>
 							</div>
@@ -376,7 +379,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Freelance Advertiser</h3>
-									<span class="company">2017 Kasım - 2018 Ocak</span>
+									<span class="company">2017</span>
 								</div>
 								<!-- <div class="timeline-body">
 									<p><i class="fas fa-users"></i>  Müşteri: "Piri Köfte ve Burger"</p>
@@ -397,7 +400,7 @@
 						</li>
 						<br>
 						<li class="timeline-heading text-center animate-box">
-							<div><h3>EĞİTİM</h3></div>
+							<div><h3>EDUCATION</h3></div>
 						</li>
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
@@ -428,7 +431,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">University</h3>
-									<span class="company">Dokuz Eylül University - Engineering Faculty - Geophisics Engineering</span>
+									<span class="company">Dokuz Eylül University - Engineering Faculty - Geophysics Engineering</span>
 								</div>
 								<div class="timeline-body">
 									<p>2010-2013</p>
@@ -439,7 +442,7 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Üniversity</h3>
+									<h3 class="timeline-title">University</h3>
 									<span class="company">Dokuz Eylul University - Faculty of Fine Arts - Film Design and Directing</span>
 								</div>
 								<div class="timeline-body">
@@ -480,17 +483,17 @@
 					<div class="chart" data-percent="85"><span><strong>Adobe Photoshop</strong>%85</span></div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="70"><span><strong>Adobe AfterEffects</strong>%70</span></div>
+					<div class="chart" data-percent="70"><span><strong>Adobe AfterEffects</strong>%80</span></div>
 				</div>
 
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="60"><span><strong>Adobe Illustrator</strong>%60</span></div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="50"><span><strong>Adobe Audition</strong>%50</span></div>
+					<div class="chart" data-percent="50"><span><strong>Adobe Audition</strong>%60</span></div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="50"><span><strong>Adobe Indesign</strong>%50</span></div>
+					<div class="chart" data-percent="50"><span><strong>Adobe Indesign</strong>%60</span></div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="40"><span><strong>NukeX</strong>%40</span></div>
@@ -499,14 +502,14 @@
 					<div class="chart" data-percent="40"><span><strong>Blender 3D</strong>%40</span></div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="25"><span><strong>HTML5</strong>%25</span></div>
+					<div class="chart" data-percent="25"><span><strong>HTML5</strong>%50</span></div>
 				</div>
 			</div>
 		</div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Diller</h2>
+					<h2>LANGUAGES</h2>
 				</div>
 			</div>
 			<div class="row row-pb-md">
