--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
+	<style> #link { color: white; } /* CSS link color */</style>
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
@@ -56,6 +57,8 @@
 							<div class="profile-thumb" style="background: url(images/ecu.jpg);"></div>
 							<h1><span>Efe Can UYAR</span></h1>
 							<h3><span>Yönetmen / Senarist / Film Editör</span></h3>
+							<h4></h4>
+							<h4><a id="link" href="https://uyarefecan.github.io/en">Change to English</a></h4>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://twitter.com/efecanuyar" target="_blank"><i class="icon-twitter2"></i></a></li>
@@ -376,10 +379,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Freelance Advertiser</h3>
-									<span class="company">2017 Kasım - 2018 Ocak</span>
+									<span class="company">2017</span>
 								</div>
 								<div class="timeline-body">
-									<p><i class="fas fa-users"></i>  Müşteri: "Piri Köfte ve Burger"</p>
+									<!-- <p><i class="fas fa-users"></i>  Müşteri: "Piri Köfte ve Burger"</p> -->
 								</div>
 							</div>
 						</li>
@@ -468,17 +471,17 @@
 					<div class="chart" data-percent="85"><span><strong>Adobe Photoshop</strong>%85</span></div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="70"><span><strong>Adobe AfterEffects</strong>%70</span></div>
+					<div class="chart" data-percent="70"><span><strong>Adobe AfterEffects</strong>%80</span></div>
 				</div>
 
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="60"><span><strong>Adobe Illustrator</strong>%60</span></div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="50"><span><strong>Adobe Audition</strong>%50</span></div>
+					<div class="chart" data-percent="50"><span><strong>Adobe Audition</strong>%60</span></div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="50"><span><strong>Adobe Indesign</strong>%50</span></div>
+					<div class="chart" data-percent="50"><span><strong>Adobe Indesign</strong>%60</span></div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="40"><span><strong>NukeX</strong>%40</span></div>
@@ -487,7 +490,7 @@
 					<div class="chart" data-percent="40"><span><strong>Blender 3D</strong>%40</span></div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="25"><span><strong>HTML5</strong>%25</span></div>
+					<div class="chart" data-percent="25"><span><strong>HTML5</strong>%50</span></div>
 				</div>
 			</div>
 		</div>
@@ -515,7 +518,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p><i class="fas fa-copyright"></i>  2018 - Efe Can UYAR - Tüm Hakları Saklıdır.</p>
+					<p><i class="fas fa-copyright"></i>  2019 - Efe Can UYAR - Tüm Hakları Saklıdır.</p>
 					<p><i class="fas fa-mobile"></i>  <a class="phone" href="tel:+905063903185">+90 506 390 31 85</a></p>
 					<p><i class="fas fa-envelope"></i>  <a class="phone" href="mailto:efecanuyar@gmail.com" target="_top">efecanuyar@gmail.com</a></p>
 				</div>
