--- a/en.html
+++ b/en.html
@@ -259,6 +259,7 @@
 								<div class="timeline-body">
 									<p><i class="fas fa-user"></i>  İzmir University of Economy 2015 Software Engineering Graduation Project / Alper Silistre</p>
 									<p><i class="fas fa-gamepad"></i>  Adventure video game for the Windows PC platform. It was greenlit by Steam.</p>
+									<p><i class="far fa-play-circle"></i><a href="https://www.youtube.com/watch?v=MCAv0oHIwAU" target="_blank">  Trailer</a></p>
 								</div>
 							</div>
 						</li>
@@ -272,6 +273,7 @@
 								<div class="timeline-body">
 									<p><i class="fas fa-user"></i>  İzmir Yaşar University 2015 Software Engineering Graduation Project / Oğuz Türkekul and Sonat Karan</p>
 									<p><i class="fas fa-gamepad"></i>  Augmented Reality (AR) FPS video game developed for the Windows PC platform.</p>
+									<p><i class="far fa-play-circle"></i><a href="https://www.youtube.com/watch?v=dF9s8HLcPLU&t=1s" target="_blank">  Trailer</a></p>
 								</div>
 							</div>
 						</li>
