--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 								<div class="timeline-body">
 									<p><i class="fas fa-user"></i>  İzmir Ekonomi Üniversitesi 2015 Yılı Yazılım Mühendisliği Bölümü Bitirme Projesi / Alper Silistre</p>
 									<p><i class="fas fa-gamepad"></i>  Windows platformu için hazırlanan Adventure türünde video oyunu. Steam Greenlight sisteminden yayın onayı almıştır.</p>
+									<p><i class="far fa-play-circle"></i><a href="https://www.youtube.com/watch?v=MCAv0oHIwAU" target="_blank">  Fragman</a></p>
 								</div>
 							</div>
 						</li>
@@ -272,6 +273,7 @@
 								<div class="timeline-body">
 									<p><i class="fas fa-user"></i>  Yaşar Üniversitesi 2015 Yılı Yazılım Mühendisliği Bölümü Bitirme Projesi / Oğuz Türkekul ve Sonat Karan</p>
 									<p><i class="fas fa-gamepad"></i>  Windows platformu için hazırlanan arttırılmış gerçeklik (AR), FPS türünde video oyunu.</p>
+									<p><i class="far fa-play-circle"></i><a href="https://www.youtube.com/watch?v=dF9s8HLcPLU&t=1s" target="_blank">  Fragman</a></p>
 								</div>
 							</div>
 						</li>
