--- a/en.html
+++ b/en.html
@@ -397,6 +397,7 @@
 								</div>
 								<div class="timeline-body">
 									<p><i class="fas fa-users"></i>  Director, Co-Founder, Social Media Advisor/Manager, Videographer, Video Editor, Digital Content Creator</p>
+									<p><i class="fas fa-link"></i><a href="https://www.designcorp9.com/#Portfolio" target="_blank">  Portfolio</a></p>
 								</div>
 							</div>
 						</li>
