--- a/index.html
+++ b/index.html
@@ -388,6 +388,19 @@
 								</div>
 							</div>
 						</li>
+						<li class="animate-box timeline-inverted">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Design Corp. #9</h3>
+									<span class="company">2017 - Current</span>
+								</div>
+								<div class="timeline-body">
+									<p><i class="fas fa-users"></i>  Director, Co-Founder, Social Media Advisor/Manager, Videographer, Video Editor, Digital Content Creator</p>
+									<p><i class="fas fa-link"></i><a href="https://www.designcorp9.com/#Portfolio" target="_blank">  Portfolyo</a></p>
+								</div>
+							</div>
+						</li>
 						<br>
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>EĞİTİM</h3></div>
