--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<h1><span>Efe Can UYAR</span></h1>
 							<h3><span>Yönetmen / Senarist / Film Editör</span></h3>
 							<h4></h4>
-							<h4><a id="link" href="https://uyarefecan.github.io/en">Change to English</a></h4>
+							<h4><a id="link" href="https://uyarefecan.github.io/en">Switch to English</a></h4>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://twitter.com/efecanuyar" target="_blank"><i class="icon-twitter2"></i></a></li>
