--- a/en.html
+++ b/en.html
@@ -58,7 +58,7 @@
 							<h1><span>Efe Can UYAR</span></h1>
 							<h3><span>Director / Screenwriter / Film Editor</span></h3>
 							<h4></h4>
-							<h4><a id="link" href="https://uyarefecan.github.io">Change to Turkish</a></h4>
+							<h4><a id="link" href="https://uyarefecan.github.io">Switch to Turkish</a></h4>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://twitter.com/efecanuyar" target="_blank"><i class="icon-twitter2"></i></a></li>
