--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 							<h3><span>Yönetmen / Senarist / Film Editör</span></h3>
 							<h4></h4>
 							<h4><a id="link" href="https://uyarefecan.github.io/en">Switch to English</a></h4>
+							<h4 style="color: white;">Kısa CV'me<a href="images/ecucv.pdf" target="_blank" style="color: red;"> göz atın!</a></h4>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://twitter.com/efecanuyar" target="_blank"><i class="icon-twitter2"></i></a></li>
@@ -124,11 +125,11 @@
 
 	<div id="fh5co-resume" class="fh5co-bg-color">
 		<div class="container">
-			<div class="row animate-box">
+			<!-- <div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>CV</h2>
 				</div>
-			</div>
+			</div> -->
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline">
