--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-            <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
+            <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status" style="color: #f76e14;">
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
@@ -59,9 +59,9 @@
                         <div class="nav-item dropdown">
                             <a href="#portfolio" class="nav-link nav-item">Portfolio</a>
                             <div class="dropdown-menu m-0">
-                                <a href="team.html" class="dropdown-item">The Golden Ticket</a>
-                                <a href="testimonial.html" class="dropdown-item">Pet Adoption</a>
-                                <a href="404.html" class="dropdown-item">Vote!</a>
+                                <a href="https://docs.google.com/presentation/d/1kusDPeg1KVbFxLu1TnSj48DengaqSE4EJSGi-lsuRpM/edit?usp=sharing" target="_blank" class="dropdown-item">The Golden Ticket</a>
+                                <a href="https://docs.google.com/presentation/d/1DubZE1yuz2P7XorfSdUMm90ERMsFh582ginQEx8g9gM/edit?usp=sharing" target="_blank" class="dropdown-item">Pet Adoption</a>
+                                <a href="https://docs.google.com/presentation/d/1A5jkJ1qaJWbyba3kYHcRinDmQLxIdcjZW2200E2cKl8/edit?usp=sharing" target="_blank" class="dropdown-item">Vote!</a>
                             </div>
                         </div>
                         <a href="#skills" class="nav-item nav-link">Skills</a>
@@ -77,11 +77,11 @@
                             <h1 class="text-white mb-4 animated slideInDown">Hello There!</h1>
                             <p class="text-white pb-3 animated slideInDown">My name is Efe Can and I am a UI/UX designer! </p>
                             <p class="text-white pb-3 animated slideInDown">I’ve always been passionate about solving problems, storytelling and making things easier for everyone around me. Since my formal education on filmmaking, the problem solving aspect of my personality guided me towards the UX field. I love getting to the bottom of a problem, creating stories around it and coming up with a solution and I think the best way to guide my passion into reality is through UX design.</p>
-                            <p class="text-white pb-3 animated slideInDown">I worked as a digital content creator between 2017 and 2021, creating animations, making movies, taking photographs and customizing websites for my clients.</p>
+                            <p class="text-white pb-3 animated slideInDown">I worked as a digital content creator between 2018 and 2021, creating animations, making movies, taking photographs and customizing websites for my clients.</p>
                             <p class="text-white pb-3 animated slideInDown">After vigorous study sessions, I’ve completed the Google UX Design Professional Certificate on Coursera, and put together this website to showcase my portfolio to further advance my career in UX design.</p>
                             <p class="text-white pb-3 animated slideInDown">Thank you for taking interest in my work and I can’t wait to hear what you think about my portfolio.</p>
                             <a href="#portfolio" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Portfolio</a>
-                            <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Resumé</a>
+                            <a href="https://drive.google.com/file/d/1pDsMRoi88b7XYDykTaVkK9rD5tOZo7UP/view?usp=sharing" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight" target="_blank">Resumé</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
                             <img class="img-fluid animated zoomIn" src="img/hero2.png" alt="">
@@ -237,12 +237,12 @@
                                 <img class="img-fluid w-100" src="img/portfolio-2.jpg" alt="">
                                 <div class="portfolio-overlay">
                                     <!-- <a class="btn btn-square btn-outline-light mx-1" href="img/thegoldenticket-cs.pdf" data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
-                                    <a class="btn btn-square btn-outline-light mx-1" href="https://docs.google.com/presentation/d/1A5jkJ1qaJWbyba3kYHcRinDmQLxIdcjZW2200E2cKl8/edit?usp=sharing" target="_blank"><i class="fa fa-link"></i></a>
+                                    <a class="btn btn-square btn-outline-light mx-1" href="https://docs.google.com/presentation/d/1DubZE1yuz2P7XorfSdUMm90ERMsFh582ginQEx8g9gM/edit?usp=sharing" target="_blank"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                             <div class="bg-light p-4">
                                 <p class="text-primary fw-medium mb-2">UI / UX Design</p>
-                                <h5 class="lh-base mb-0">Pet Adoption App and Website</a>
+                                <h5 class="lh-base mb-0">Pet Adoption Website</a>
                             </div>
                         </div>
                     </div>
@@ -251,13 +251,13 @@
                             <div class="position-relative overflow-hidden">
                                 <img class="img-fluid w-100" src="img/portfolio-3.jpg" alt="">
                                 <div class="portfolio-overlay">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="img/portfolio-3.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                    <!-- <a class="btn btn-square btn-outline-light mx-1" href=""><i class="fa fa-link"></i></a> -->
+                                    <!-- <a class="btn btn-square btn-outline-light mx-1" href="img/portfolio-3.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
+                                    <a class="btn btn-square btn-outline-light mx-1" href="https://docs.google.com/presentation/d/1A5jkJ1qaJWbyba3kYHcRinDmQLxIdcjZW2200E2cKl8/edit?usp=sharing" target="_blank"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
-                                <h5 class="lh-base mb-0">Pet Adoption App and Website</a>
+                                <p class="text-primary fw-medium mb-2">UI / UX Design for Social Good</p>
+                                <h5 class="lh-base mb-0">Vote! App and Website</a>
                             </div>
                         </div>
                     </div>
@@ -391,9 +391,9 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item d-flex flex-column text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fas fa-vector-square fa-2x"></i>
+                                <i class="fas fa-shapes fa-2x"></i>
                             </div>
-                            <h5 class="mb-3">Figma</h5>
+                            <h5 class="mb-3">UX Design</h5>
                             <!-- <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p> -->
                             <!-- <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a> -->
                         </div>
@@ -401,9 +401,9 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item d-flex flex-column text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fas fa-vector-square fa-2x"></i>
+                                <i class="fas fa-user-friends fa-2x"></i>
                             </div>
-                            <h5 class="mb-3">Adobe XD</h5>
+                            <h5 class="mb-3">UX Research</h5>
                             <!-- <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p> -->
                             <!-- <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a> -->
                         </div>
@@ -411,9 +411,9 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="service-item d-flex flex-column text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="far fa-image fa-2x"></i>
+                                <i class="far fa-object-group fa-2x"></i>
                             </div>
-                            <h5 class="mb-3">Adobe Photoshop</h5>
+                            <h5 class="mb-3">UI Design</h5>
                             <!-- <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p> -->
                             <!-- <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a> -->
                         </div>
@@ -421,9 +421,9 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item d-flex flex-column text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fas fa-paint-brush fa-2x"></i>
+                                <i class="fas fa-copy fa-2x"></i>
                             </div>
-                            <h5 class="mb-3">Adobe Illustrator</h5>
+                            <h5 class="mb-3">Wireframing</h5>
                             <!-- <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p> -->
                             <!-- <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a> -->
                         </div>
@@ -431,9 +431,9 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item d-flex flex-column text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fas fa-video fa-2x"></i>
+                                <i class="fas fa-project-diagram fa-2x"></i>
                             </div>
-                            <h5 class="mb-3">Adobe Premiere</h5>
+                            <h5 class="mb-3">Prototyping</h5>
                             <!-- <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p> -->
                             <!-- <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a> -->
                         </div>
@@ -441,9 +441,9 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="service-item d-flex flex-column text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fas fa-photo-video fa-2x"></i>
+                                <i class="fas fa-laptop-code fa-2x"></i>
                             </div>
-                            <h5 class="mb-3">Adobe AfterEffects</h5>
+                            <h5 class="mb-3">HTML/CSS</h5>
                             <!-- <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p> -->
                             <!-- <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a> -->
                         </div>
@@ -463,9 +463,9 @@
                         <h1 class="text-center text-white mb-4">Let's Stay in Touch</h1>
                         <p class="text-white mb-4">If you’d like get in touch with me please feel free to contact me via mail or any social media platforms listed below. Can't wait to hear from you!</p>
                         <p><i class="fa fa-envelope me-3" style="color: white;"></i><a style="color: white;" href="mailto:efecanuyar@gmail.com">efecanuyar@gmail.com</a></p>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/in/efecanuyar/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://twitter.com/efecanuyar" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/efecanuyar/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <!-- <div class="position-relative w-100 mt-3">
                             <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Enter Your Email" style="height: 48px;">
                             <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
