--- a/index.html
+++ b/index.html
@@ -472,6 +472,9 @@
                             <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
                         </div> -->
                     </div>
+                    <div class="col-lg-6 text-center text-lg-start">
+                    <a href="https://www.credly.com/badges/85ca04c4-ac40-4ed1-8a29-7f1b20c40aed/public_url" target="_blank"><img class="img-fluid animated zoomIn" src="img/badge.png" alt="Google UX Design Professional Certificate"></a>
+                </div>
                 </div>
             </div>
         </div>
