--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                         <h1 class="text-center text-white mb-4">Let's Stay in Touch</h1>
                         <p class="text-white mb-4">If you’d like get in touch with me please feel free to contact me via mail or any social media platforms listed below. Can't wait to hear from you!</p>
                         <p><i class="fa fa-envelope me-3" style="color: white;"></i><a style="color: white;" href="mailto:efecanuyar@gmail.com">efecanuyar@gmail.com</a></p>
-                            <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/in/efecanuyar/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/in/efecanuyar/?locale=en_US" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://twitter.com/efecanuyar" target="_blank"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/efecanuyar/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <!-- <div class="position-relative w-100 mt-3">
