--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <p class="text-white pb-3 animated slideInDown">Thank you so much for your interest in my work! I am thrilled to have the opportunity to share my portfolio with you. I can't wait to hear your thoughts!</p>
                             <a href="#portfolio" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">UX Portfolio</a>
                             <a href="film.html" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft" target="_blank">Filmography</a>
-                            <a href="https://drive.google.com/file/d/1KduKcp9f0DDsBOkEwX2f4asfhMRXJ4F0/view?usp=share_link" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight" target="_blank">Resumé</a>
+                            <a href="https://drive.google.com/file/d/1Sew3ivO7N-_CnAGHXQsKzhJG6Ly0IIb3/view?usp=sharing" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight" target="_blank">Resumé</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
                             <img class="img-fluid animated zoomIn" src="img/hero2.png" alt="">
