--- a/film.html
+++ b/film.html
@@ -146,7 +146,8 @@
 								</div>
 								<div class="timeline-body">
 									<p><i class="fas fa-users"></i>  Director, Co-Founder, Social Media Advisor/Manager, Videographer, Video Editor, Motion Designer, Digital Content Creator</p>
-									<p><i class="fas fa-link"></i><a href="https://www.nomamimarlik.com" target="_blank">  Portfolio</a></p>
+									<p><i class="fas fa-link"></i><a href="https://www.youtube.com/@nomamimarlik" target="_blank">  Promotional Videos</a></p>
+									<p><i class="fas fa-link"></i><a href="https://www.nomamimarlik.com" target="_blank">  Company Website</a></p>
 								</div>
 							</div>
 						</li>
